[package]
name = "ramp_table"
version = "0.1.0"
authors = ["Arlie Davis <arlie.davis@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Provides RampTable, a data structure useful for certain specialized situations."
homepage = "https://github.com/sivadeilra/ramp_table"
repository = "https://github.com/sivadeilra/ramp_table"

[dependencies]
